--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,88 @@
 absl-py==0.7.1
+appnope==0.1.0
 astor==0.8.0
-Click==7.0
+astroid==2.2.5
+attrs==19.1.0
+backcall==0.1.0
+bleach==3.1.0
 cycler==0.10.0
-Flask==1.1.1
-Flask-Cors==3.0.8
+decorator==4.4.0
+defusedxml==0.6.0
+entrypoints==0.3
 gast==0.2.2
 google-pasta==0.1.7
+graphviz==0.10.1
 grpcio==1.22.0
-gunicorn==19.9.0
 h5py==2.9.0
-itsdangerous==1.1.0
+ipykernel==5.1.1
+ipython==7.6.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.0
+isort==4.3.21
+jedi==0.14.0
 Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.5.0
 Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
+kiwisolver==1.0.1
+lazy-object-proxy==1.4.1
 Markdown==3.1.1
 MarkupSafe==1.1.1
 matplotlib==3.1.1
+mccabe==0.6.1
+mistune==0.8.4
+mysql-connector==2.2.9
+nbconvert==5.5.0
+nbformat==4.4.0
+notebook==5.7.8
 numpy==1.16.4
 opencv-python==4.1.0.25
 pandas==0.24.2
-patsy==0.5.1
+pandocfilters==1.4.2
+parso==0.5.0
+pbr==5.4.0
+pexpect==4.7.0
+pickleshare==0.7.5
+prometheus-client==0.7.1
+prompt-toolkit==2.0.9
 protobuf==3.9.0
-pymc3==3.7
-pyparsing==2.4.1.1
-python-dateutil==2.8.0
-pytz==2019.1
+ptyprocess==0.6.0
+pydot==1.4.1
+Pygments==2.4.2
+pylint==2.3.1
+pyparsing==2.3.1
+pyrsistent==0.15.2
+python-dateutil==2.7.5
+pytz==2018.9
 PyYAML==5.1.1
-scipy==1.3.0
-simanneal==0.4.2
+pyzmq==18.0.2
+qtconsole==4.5.1
+scikit-learn==0.20.3
+scipy==1.2.0
+Send2Trash==1.5.0
 six==1.12.0
+sklearn==0.0
+stevedore==1.30.1
+TBB==0.1
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
-Theano==1.0.4
-tqdm==4.32.2
+terminado==0.8.2
+testpath==0.4.2
+tornado==6.0.3
+traitlets==4.3.2
+typed-ast==1.4.0
+virtualenv==16.6.1
+virtualenv-clone==0.5.3
+virtualenvwrapper==4.8.4
+wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==0.15.5
+widgetsnbextension==3.5.0
 wrapt==1.11.2
